; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenc.c_mov_write_uuid_tag_ipod.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenc.c_mov_write_uuid_tag_ipod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"uuid\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @mov_write_uuid_tag_ipod to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mov_write_uuid_tag_ipod(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @avio_wb32(i32* %3, i32 28)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @ffio_wfourcc(i32* %5, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @avio_wb32(i32* %7, i32 1801994482)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @avio_wb32(i32* %9, i32 1596215237)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @avio_wb32(i32* %11, i32 -1170627301)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @avio_wb32(i32* %13, i32 -821877773)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @avio_wb32(i32* %15, i32 0)
  ret i32 28
}

declare dso_local i32 @avio_wb32(i32*, i32) #1

declare dso_local i32 @ffio_wfourcc(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
